# MidClaw

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  midclaw.service  nginx.conf  package-lock.json  package.json  pyproject.toml  tsconfig.json
brain/: __init__.py  agent.py  bridge.py  compressor.py
brain/skills/: __init__.py  base.py  recon.py  registry.py
brain/tools/: __init__.py  base.py  files.py  registry.py  shell.py  web.py
docs/: ARCHITECTURE.md  PRD.md
sim/: __init__.py  cli.py  mitre.py  profiles.py  report.py  runner.py
src/: index.ts
src/core/: eventbus.ts  hooks.ts  index.ts  steering.ts  subturn.ts
src/security/: audit.ts  index.ts  scanner.ts
src/security/hooks/: approval.ts  context-injector.ts  prompt-guard.ts  vault-logger.ts
src/vault/: dreaming.ts  index.ts  rag.ts  store.test.ts  store.ts  wikilink.ts  writer.ts
web/: app.js  index.html  style.css
